# HeartDeformNets

./: .gitmodules  README.md  predict.py  requirements.txt  train.py
config/: task1_mmwhs.yaml  task2_wh.yaml
helper-scripts/: intersection.py  self_contact.py
src/: augmentation.py  call_backs.py  custom_layers.py  data_loader.py  dataset.py  loss.py  model.py  pre_process.py  tf_utils.py  utils.py
templates/: clean_multi_component_to_single.py  create_template.py  create_template.sh  lh_template.vtp  lv_template.vtp  make_mesh_info_dat.py  mmwhs_template.vtp  rh_template.vtp  wh_template.vtp
templates/bc/: CMakeLists.txt  bc.cpp  bc_interp.cpp  sample_key_points.cpp
templates/bc/cmake/: libigl.cmake
templates/meshes/: vessel_centers.yaml
